# starbot

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-push.yml
src/: main.rs
